All tests pass. I think we got scoring working
